--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@axiomhq/js": "^1.0.0-rc.3",
     "axios": "^1.7.2",
     "easytimer.js": "^4.6.0",
     "random-useragent": "^0.5.0"
